--- a/styles.styl
+++ b/styles.styl
@@ -1,9 +1,26 @@
+// 左侧标签栏的颜色
 .site-nav-toggle .toggle .toggle-line,
 .site-nav-right .toggle .toggle-line {
   background: #000;
 }
 
+// 右侧搜索栏的颜色
 .site-nav-toggle .toggle,
 .site-nav-right .toggle {
   color: #000;
+}
+
+// mathjax 数学公式的颜色
+.MathJax {
+  overflow-x: auto;
+  overflow-y: auto;
+  color: #2e3be5;
+}
+
+// 修改代码 mac 风格的高亮
+.highlight-container {
+  background: #d5d5d5;
+  border-radius: 5px;
+  box-shadow: 0 10px 30px 0 rgba(0,0,0,0);
+  padding-top: 30px;
 }
