--- a/variables.styl
+++ b/variables.styl
@@ -48,7 +48,7 @@ $body-bg-color                = #FFFFFF;
 
 // Selection  选中后的背景
 $selection-bg                 = #c5c5c5;
-$selection-color              = #000000;
+$selection-color              = #f5f5f5;
 
 
 // Typography
@@ -260,16 +260,16 @@ $toc-link-active-current-border-color = $sidebar-highlight;
 // Components
 // --------------------------------------------------
 // Back to top
-$b2t-opacity                  = 1;
+$b2t-opacity                  = 2;
 $b2t-opacity-hover            = .8;
 $b2t-position-bottom          = -100px;
 $b2t-position-bottom-on       = 19px;
 $b2t-position-right           = 30px;
 $b2t-position-right-mobile    = 20px;
-$b2t-font-size                = 12px;
-$b2t-color                    = white;
+$b2t-font-size                = 20px;
+$b2t-color                    = #000000;
 $b2t-bg-color                 = $black-deep;
-$b2t-sidebar-bg-color         = $black-deep;
+$b2t-sidebar-bg-color         = #000000;
 
 //  .post-expand .post-eof
 //  In Muse scheme, margin above and below the post separator
