--- a/styles.styl
+++ b/styles.styl
@@ -24,3 +24,12 @@
   box-shadow: 0 10px 30px 0 rgba(0,0,0,0);
   padding-top: 30px;
 }
+
+blockquote {
+    color: #333; // 文字颜色
+    border-left: 4px solid #42b983; // 边框颜色和粗细
+    background-color: #e6fcea; // 背景颜色
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    margin-bottom: 20px;
+}
