--- a/variables.styl
+++ b/variables.styl
@@ -13,8 +13,8 @@ $gray-lighter = #000000;          // 标题描述的颜色
 $grey-light   = #ccc;
 $grey         = #bbb;
 
-$grey-dark    = #46a083;       // 发表于的颜色
-$grey-dim     = #ff0000;       // > 的颜色
+$grey-dark    = #0366d6;       // 发表于的颜色
+$grey-dim     = #000000;       // > 的颜色
 
 $black-light  = #000000;       // 文章标题颜色
 $black-dim    = #333;
@@ -35,8 +35,8 @@ $orange       = #000000;
 $text-color                   = #000000;
 
 // Global link color.
-$link-color                   = #468f83;
-$link-hover-color             = #46a483;
+$link-color                   = #0366d6;
+$link-hover-color             = #0350d6;
 $link-decoration-color        = #000000;
 $link-decoration-hover-color  = #ff0000;
 
@@ -62,7 +62,7 @@ get_font_family(config) {
 // Font families.
 $font-family-chinese      = 'Palatino Linotype', 'Book Antiqua', 'source-han-serif-sc', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Songti SC', '仿宋', 'FangSong', 'NSimSun', 'Microsoft YaHei', serif;
 
-$font-family-base         = 'Palatino Linotype', 'Source Han Sans CN';
+$font-family-base         = "Palatino Linotype", "Source Han Sans SC", "Noto Sans CJK SC", source-han-sans-cjk-sc, sans-serif;
 $font-family-base         = get_font_family('global'), $font-family-chinese, sans-serif if get_font_family('global');
 
 $font-family-logo         = $font-family-base;
@@ -139,8 +139,8 @@ $table-row-hover-bg-color       = #f9f9f9;
 // --------------------------------------------------
 $code-font-family               = $font-family-monospace;
 $code-border-radius             = 3px;
-$code-foreground                = #46a083;
-$code-background                = #ffffff;
+$code-foreground                = #0366d6;
+$code-background                = #eaf5ff;
 
 
 // Buttons
@@ -199,14 +199,14 @@ $head-bg                        = transparent;
 
 // Site Meta
 $site-meta-text-align           = center;
-$brand-color                    = #46a083;
-$brand-hover-color              = #46a083;
+$brand-color                    = #0366d6;
+$brand-hover-color              = #0366d6;
 $brand-bg                       = $black-deep;
 
 $font-size-title                = $font-size-largest;
 $font-size-subtitle             = $font-size-smaller;
-$subtitle-color                 = #46a083; // 明月更几时的颜色
-$site-subtitle-color            = #46a083; //爱生活-------爱读书-------爱摄影 的颜色
+$subtitle-color                 = #0366d6; // 明月更几时的颜色
+$site-subtitle-color            = #0366d6; //爱生活-------爱读书-------爱摄影 的颜色
 
 
 // Posts Collpase
